--- a/product-manager.html
+++ b/product-manager.html
@@ -40,13 +40,33 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
-      Product Manager - Oyster Financial Inc 
-    </a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999698402175-senior-product-manager'>Bosch Group Senior Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/TechnologyNavigators/743999698404419-senior-ux-product-designer-user-experience-saas-html5-css3'>Technology Navigators Senior UX Product Designer - User Experience, SaaS, HTML5/CSS3 | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/knockrentals/9c9feaa5-ddb7-48af-9136-51cd415a5cd0'>Knock, Inc - Senior Product Manager</a></h5> 
+<p><span class="badge badge-light">Seattle, WA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://spryker.join.com/jobs/464517-product-manager-spryker-commerce-os-m-f-d'>Job @ Spryker System (Berlin): Product Manager - S... | JOIN</a></h5> 
+<p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://itatalentportal.com/job/product-owner/51249346/'>Product Owner Job Opening in Chicago, Illinois - Illinois Technology Association Career Center</a></h5> 
+<p><span class="badge badge-light">Chicago, Illinois</span></p>
+<p>Posted on:: 2019-10-29</p>
+<hr/>
+<h5><a href='https://joinoyster.recruitee.com/o/product-manager'>
+      Product Manager - Oyster Financial Inc 
+    </a></h5> 
+<p><span class="badge badge-light">Mexico Mexico</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/splunk/job/obkobfwO'>Splunk Careers - Product Manager - Machine Learning Content</a></h5> 
 <p><span class="badge badge-light">San Francisco, California</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -58,7 +78,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698384534-product-manager-digital-printing-materials-graphics-'>Avery Dennison Product Manager - Digital Printing Materials (Graphics) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/AveryDennison/743999698384534-product-manager-digital-printing-materials-graphics-'>Avery Dennison Product Manager - Digital Printing Materials (Graphics) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Oegstgeest, Netherlands</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -228,7 +248,7 @@
 <p><span class="badge badge-light">Hamburg</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/FultonGarrickLtd/743999695432798-product-manager-software-saas-winner-of-best-tech-company'>Fulton Garrick Ltd PRODUCT MANAGER - SOFTWARE & SAAS - WINNER OF BEST TECH COMPANY | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -260,7 +280,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Oct 14, 2019 ... Apply to Senior Product Manager at FastPay in Framingham, MA.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://theorem.applytojob.com/apply/kIRkn2iqvO/Senior-Product-Manager-REMOTE'>Senior Product Manager REMOTE - Theorem, LLC - Career Page</a></h5> 
+<h5><a href='https://theorem.applytojob.com/apply/kIRkn2iqvO/Senior-Product-Manager-REMOTE'>Senior Product Manager REMOTE - Theorem, LLC - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 17, 2019 ... We're looking for an experienced product manager to join the team at Theorem. It 
 is expected that you have lived the full product lifecycle, having brought mult.</p>
@@ -284,7 +304,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Cape Town South Africa  Cape Town Vancouver</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/internetbrands/job/oy6obfwX'>Internet Brands Careers - Associate Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/internetbrands/job/oy6obfwX'>Internet Brands Careers - Associate Product Manager</a></h5> 
 <p><span class="badge badge-light">Los Angeles, California</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -346,7 +366,7 @@ New York, NY.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
+<h5><a href='https://boards.greenhouse.io/chewse/jobs/4490115002'>Job Application for Sr. Product Designer at Chewse</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -416,7 +436,7 @@ New York, NY.</p>
 <p><span class="badge badge-light">Foster City, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/shopify/e1b101da-0eb5-4273-9a3e-6bc6748ac157'>Shopify - Product Designer - Themes</a></h5> 
+<h5><a href='https://jobs.lever.co/shopify/e1b101da-0eb5-4273-9a3e-6bc6748ac157'>Shopify - Product Designer - Themes</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -439,26 +459,6 @@ New York, NY.</p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
 <h5><a href='http://steelseries.applytojob.com/apply/pkGKEd0SrJ/Product-Manager'>Product Manager - SteelSeries - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://apply.workable.com/freeagent/j/2A140B9B03?utm_campaign=cb23518825&utm_medium=eps&utm_source=twitter'>Product Designer - FreeAgent</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/breathelife/jobs/4497907002'>Job Application for Product Owner at Breathe Life</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://houzy.join.com/jobs/457158-digital-product-designer-80-100'>Job @ Houzy (Z?rich): Digital Product Designer 80-... | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Jobpal1/743999698291677-senior-product-manager'>jobpal Senior Product Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Berlin, Germany</span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698291868-product-manager-biosimilars-m-f-'>Biogen Product Manager, Biosimilars (m/f) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
